# OmniDiff

./: .env.example  .gitignore  .gitleaksignore  CLAUDE.md  NOTICE.md  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-wheels.yml  ci.yml  gitleaks.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  exceptions.py  main.py
backend/app/api/: health.py  indexing.py  router.py
backend/app/middleware/: request_id.py
backend/app/models/: __init__.py  base.py  commit.py  repository.py
backend/app/providers/: base.py  factory.py  gemini.py  groq.py  voyage.py
backend/app/repositories/: __init__.py  base.py  chunk_repo.py  commit_repo.py  repository_repo.py
backend/app/schemas/: indexing.py  ingest.py
backend/app/services/: _git_subprocess.py  clone.py  health.py  indexing_runner.py  ingest.py  ingest_chunker.py  ingest_filters.py  logging_config.py  task_session.py
backend/cli/: __init__.py  __main__.py  clone.py  index_command.py  runner.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py
backend/tests/: conftest.py  test_api_indexing.py  test_cli_index.py  test_clone_helper.py  test_git_subprocess.py  test_git_subprocess_diff.py  test_health.py  test_ingest_chunker.py  test_ingest_chunking.py  test_ingest_filters.py  test_ingest_incremental.py  test_ingest_walking.py  test_logging_config.py  test_request_id_middleware.py
core/: .gitignore  Cargo.toml  README.md  pyproject.toml
core/benches/: ingest_bench.rs
core/fixtures/: README.md
core/src/: chunker.rs  diff.rs  errors.rs  filters.rs  lib.rs  tokens.rs  walker.rs
frontend/: Dockerfile  nginx.conf  package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: footer.tsx  header.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: home.tsx
