[project]
name = "omnidiff"
version = "0.1.0"
description = "Semantic search for Git commits via embeddings of diffs"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Johan Carlos" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "alembic>=1.14",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
    "mypy>=1.14",
    "py-spy>=0.4",          # profiler para Fase 2-B (identificar hot path)
]
# Camada Rust (opcional) — instalada via `maturin develop` a partir de `core/`.
# Não é dependência publicada no PyPI ainda; durante desenvolvimento o módulo
# `omnidiff_core` é injetado no `.venv` por maturin.
core = [
    "maturin>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"app/api/*.py" = ["B008"]  # Depends() in defaults is standard FastAPI

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
